tests/ok/vector-first-last.ari
fn main() -> i64 {
  var values: Vec[i64] = [];
  values.push(4);
  values.push(5);
  values.push(6);

  let head: i64 = values.first();
  let tail: i64 = values.last();
  values.pop();
  let new_tail: i64 = values.last();

  return values.capacity() + len(values) + head + tail + new_tail;
}
