tests/errors/generic-uninferred.ari
fn make[T]() -> T {
  return 0;
}

fn main() -> i64 {
  return make();
}
